Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/badOverridenSig.deca
// Description:
//    Défintition d'une classe et d'une fille de cette classe avec redéfintion de méthode
//
// Resultats: Ligne 24
//    ContextualError : Returned type of overriden method must be a subtype of the parent method return type
// Historique:
//    cree le 18/01/2018

class A{
      int x;

      void multX(int n){
      	   x = n*x;
      }
}

class B extends A {

      void multX(){
	x = x*x;  
      }

}
